# infra-devops

./: .gitignore  Makefile  README.md  pyproject.toml
.githooks/: commit-msg
.github/workflows/: enforce-claude-coauthor.yml
ansible/: ansible.cfg  site.yml
ansible/group_vars/: all.yml
ansible/inventory/: hosts.ini
ansible/roles/calico/tasks/: main.yml
ansible/roles/hardening/tasks/: main.yml
ansible/roles/k3s/tasks/: main.yml
ansible/roles/kong/tasks/: main.yml
ansible/roles/kong/templates/: kong-all-in-one.yml.j2
scripts/: bootstrap.sh
