[project]
name = "infra-devops"
version = "0.1.0"
description = "K3s cluster bootstrap with Calico and Kong"
authors = [
    {name = "quebitsystems"}
]
readme = "README.md"
requires-python = ">=3.12,<4.0"
dependencies = [
    "ansible (>=13.3.0,<14.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
